<?xml version="1.0"?>
<package format="2">
	<name>stonefish_mvp</name>
	<version>1.3.0</version>
	<description>The stonefish_mvp package</description>
	<author email="patryk.cieslak@udg.edu">Patryk Cieslak</author>
	<maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
	<license>GPL-3.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>image_transport</depend>
	<depend>controller_manager</depend>
	<depend>mvp_msgs</depend>
	<depend>rosgraph_msgs</depend>
</package>
